# VulkanTraining

./: .gitignore  CMakeLists.txt
CMakeModules/: FindAssimp.cmake  FindFBX.cmake  FindGLFW.cmake  FindGLM.cmake  FindGLSLANG.cmake
Editor/: Editor.pro
Editor/Editor/: Editor.pro  mainwindow.ui
Engine/CMakeModules/: FindGLM.cmake
Engine/app/: CMakeLists.txt
Engine/app/src/: main.cpp
Engine/lib/include/VulkanTraining/: GameMode.h
Engine/lib/private_include/private/: PhysicalDevice.h  Surface.h  Swapchain.h  Window.h
Engine/lib/private_include/private/Managers/: DeviceLayersManager.h  ExtensionsManager.h  InstanceExtensionsManager.h  InstanceLayersManager.h  LayersManager.h  QueueFamiliesManager.h
Engine/lib/src/: GameMode.cpp
Engine/lib/src/private/: extFuncs.cpp
Engine/lib/src/private/Drawable/: BaseDrawable.cpp  StaticObjectDrawable.cpp
Engine/lib/src/private/Managers/: InstanceExtensionsManager.cpp  SwapchainManager.cpp
Engine/lib/src/private/Pipelines/: IGraphicsPipeline.cpp  StaticObjectPipeline.cpp
Engine/shaders/StaticObject/: StaticObject.vert
app/: CMakeLists.txt
app/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewerwindow.cpp  viewerwindow.h
lib/: CMakeLists.txt
lib/include/: desktop.ini
lib/include/VulkanTraining/: Camera.h  Device.h  Export.h  GameMode.h  Instance.h  OrthographicCamera.h  PhysicalDevice.h  Position.h  Surface.h  SurfacePlatform.h  Swapchain.h  VTDevice.h  VTDeviceExtensionsManager.h  VTDeviceLayersManager.h  VTExport.h  VTExtensionsManager.h  VTGameMode.h  VTInstance.h  VTInstanceExtensionsManager.h  VTInstanceLayersManager.h  VTLayersManager.h  VTPhysicalDevice.h  VTQueueFamiliesManager.h  VTSurface.h  VTSwapchain.h  VTSwapchainManager.h  VTWindow.h  Window.h  desktop.ini
lib/include/VulkanTraining/Cameras/: Camera.h  PerspectiveCamera.h
lib/include/VulkanTraining/Manager/: DeviceExtensionsManager.h  DeviceLayersManager.h  ExtensionsManager.h  InstanceExtensionsManager.h  InstanceLayersManager.h  LayersManager.h  QueueFamiliesManager.h  SwapchainManager.h
lib/include/VulkanTraining/Objects/: Object.h  StaticObject.h
lib/private_include/private/: Buffer.h  Camera.h  CommandPool.h  Device.h  Externals.h  GraphicsCommandPool.h  Instance.h  NonCopyableObject.h  PhysicalDevice.h  Semaphore.h  Shader.h  ShadersCollector.h  Surface.h  Swapchain.h  Transform.h  Window.h
lib/private_include/private/Drawable/: BaseDrawable.h  SimpleDrawable.h  StaticObjectDrawable.h
lib/private_include/private/Drawables/: BaseDrawable.h  StaticObjectDrawable.h
lib/private_include/private/Manager/: DeviceExtensionsManager.h  DeviceLayersManager.h  InstanceExtensionsManager.h  InstanceLayersManager.h
lib/private_include/private/Managers/: DeviceExtensionsManager.h  ExtensionsManager.h  LayersManager.h  QueueFamiliesManager.h  SwapchainManager.h
lib/private_include/private/Pipelines/: IGraphicsPipeline.h  SimplePipeline.h  StaticObjectPipeline.h
lib/shaders/StaticObject/: StaticObject.frag  StaticObject.vert
lib/src/: Camera.cpp  Device.cpp  GameMode.cpp  Instance.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  PhysicalDevice.cpp  Position.cpp  Surface.cpp  Swapchain.cpp  VTDevice.cpp  VTDeviceExtensionsManager.cpp  VTDeviceLayersManager.cpp  VTExtensionsManager.cpp  VTGameMode.cpp  VTInstance.cpp  VTInstanceExtensionsManager.cpp  VTInstanceLayersManager.cpp  VTLayersManager.cpp  VTPhysicalDevice.cpp  VTQueueFamiliesManager.cpp  VTSurface.cpp  VTSwapchain.cpp  VTSwapchainManager.cpp  VTWindow.cpp  Window.cpp
lib/src/Cameras/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
lib/src/Manager/: DeviceExtensionsManager.cpp  DeviceLayersManager.cpp  ExtensionsManager.cpp  InstanceExtensionsManager.cpp  InstanceLayersManager.cpp  LayersManager.cpp  QueueFamiliesManager.cpp  SwapchainManager.cpp
lib/src/Objects/: Object.cpp  StaticObject.cpp
lib/src/private/: Buffer.cpp  Camera.cpp  CommandPool.cpp  Device.cpp  GraphicsCommandPool.cpp  Instance.cpp  PhysicalDevice.cpp  Semaphore.cpp  Shader.cpp  ShadersCollector.cpp  Surface.cpp  Swapchain.cpp  Transform.cpp  Window.cpp  extFuncs.cpp
lib/src/private/Drawable/: BaseDrawable.cpp  SimpleDrawable.cpp  StaticObjectDrawable.cpp
lib/src/private/Manager/: DeviceExtensionsManager.cpp  DeviceLayersManager.cpp  ExtensionsManager.cpp  InstanceExtensionsManager.cpp  InstanceLayersManager.cpp  LayersManager.cpp  QueueFamiliesManager.cpp  SwapchainManager.cpp
lib/src/private/Managers/: DeviceExtensionsManager.cpp  DeviceLayersManager.cpp  ExtensionsManager.cpp  InstanceExtensionsManager.cpp  InstanceLayersManager.cpp  LayersManager.cpp  QueueFamiliesManager.cpp  SwapchainManager.cpp
lib/src/private/Pipelines/: SimplePipeline.cpp  StaticObjectPipeline.cpp
shaders/: compile.bat  compile.sh
shaders/Simple/: Vertex.c
shaders/StaticObject/: StaticObject.frag  StaticObject.vert
src/: GameMode.cpp  GameMode.h  VTDevice.cpp  VTDevice.h  VTDeviceExtensionsManager.cpp  VTDeviceExtensionsManager.h  VTDeviceLayersManager.cpp  VTDeviceLayersManager.h  VTExtensionsManager.cpp  VTExtensionsManager.h  VTGameMode.cpp  VTGameMode.h  VTInstance.cpp  VTInstance.h  VTInstanceExtensionsManager.cpp  VTInstanceExtensionsManager.h  VTInstanceLayersManager.cpp  VTInstanceLayersManager.h  VTLayersManager.cpp  VTLayersManager.h  VTPhysicalDevice.cpp  VTPhysicalDevice.h  VTQueueFamiliesManager.cpp  VTQueueFamiliesManager.h  VTSurface.cpp  VTSurface.h  VTSwapChain.cpp  VTSwapChain.h  VTSwapChainManager.cpp  VTSwapChainManager.h  VTSwapchain.cpp  VTSwapchain.h  VTSwapchainManager.cpp  VTSwapchainManager.h  VTWindow.cpp  VTWindow.h  main.cpp
